[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "*"
bevy_fly_camera = "0.6"
svo = { path = "../svo" }
image = "0.23.12"
wgpu = "*"

[dev-dependencies]
dot_vox = "4.1.0"
fastnbt = "0.14.0"
fastanvil = "0.14.1"

[dependencies.bevy]
version = "0.4"
features = [
    "bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    #"hdr",
    #"mp3",
    "x11",
]


[patch.crates-io]
bevy = { path = "../bevy" }
