[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "*"
bevy_fly_camera = { path = "../bevy_fly_camera" }
svo = "*"
image = "0.23.12"
wgpu = "*"

[dev-dependencies]
dot_vox = "4.1.0"
fastnbt = "0.14.0"
fastanvil = "0.14.1"

[dependencies.bevy]
path = "../bevy"
